# Javob-AI

./: .env.example  .gitignore  OPERATING_PRINCIPLES.md  PROJECT_BRIEF.md  claude.md  package.json  pnpm-lock.yaml
apps/api/: Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_conversation_unique_constraints.py  010_meta_adapters.py  011_agentic_flows.py  012_growth_layer.py  013_analytics_eval.py
apps/api/src/javobai/: config.py  crypto.py  events.py  main.py  redis.py
apps/api/src/javobai/actions/: router.py
apps/api/src/javobai/ai_settings/: router.py
apps/api/src/javobai/analytics/: router.py  schemas.py
apps/api/src/javobai/auth/: cookies.py  deps.py  router.py  service.py
apps/api/src/javobai/channels/: router.py  whatsapp_onboarding.py
apps/api/src/javobai/db/: base.py  session.py
apps/api/src/javobai/db/models/: __init__.py  action.py  action_def.py  campaign.py  campaign_recipient.py  channel.py  contact.py  conversation.py  drip.py  eval.py  faq.py  flow.py  message.py  opt_in_link.py  payment.py  product.py  rule.py  segment.py  tenant.py  usage.py  user.py
apps/api/src/javobai/faqs/: router.py
apps/api/src/javobai/flows/: router.py
apps/api/src/javobai/growth/: router.py  schemas.py
apps/api/src/javobai/inbox/: router.py  schemas.py
apps/api/src/javobai/internal/: router.py
apps/api/src/javobai/rules/: router.py
apps/api/src/javobai/schemas/: action.py  channel_meta.py  flow.py  message_patch.py
apps/api/src/javobai/tenants/: router.py
apps/api/src/javobai/webhooks/: _wa_security.py  meta.py  telegram.py  whatsapp.py
apps/api/src/javobai/ws/: manager.py  router.py
apps/api/tests/: conftest.py  test_ai_settings.py  test_analytics.py  test_auth.py  test_auth_cookies.py  test_health.py  test_inbox.py  test_phase10.py  test_phase11.py  test_phase12.py  test_rules.py  test_tenant_isolation.py  test_webhook_telegram.py
apps/worker/: Dockerfile  pyproject.toml
apps/worker/src/worker/: crypto.py  main.py  settings.py
apps/worker/src/worker/adapters/: telegram.py
apps/worker/src/worker/adapters/meta/: __init__.py  client.py  facebook_dispatcher.py  instagram_dispatcher.py  normalizer.py
apps/worker/src/worker/adapters/whatsapp/: adapter.py  dispatch.py  (+6 more)
apps/worker/src/worker/db/: session.py
apps/worker/src/worker/engine/: core.py  normalizer.py  unified.py
apps/worker/src/worker/services/: action_executor.py  conversation.py  dispatcher.py  embeddings.py  eval.py  events.py  flow_engine.py  flow_trigger.py  llm.py  rag.py  ratelimit.py  sentiment.py
apps/worker/src/worker/tasks/: embed.py  eval.py  inbound.py  meta.py  whatsapp.py
apps/worker/tests/: conftest.py  test_conversation.py  test_dispatcher.py  test_eval.py  test_events.py  test_llm.py  test_normalizer.py  test_rag.py  test_ratelimit.py  test_sentiment.py  test_worker_config.py
apps/worker/tests/whatsapp/: test_normalizer.py  test_security.py  test_window_and_adapter.py
(+78 files in other folders)
